<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/detailAvatarUrlImageView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/jetbrains"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/RoundedImage" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/detailOwnerLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/owner_login_placeholder"
            app:layout_constraintBottom_toBottomOf="@+id/detailAvatarUrlImageView"
            app:layout_constraintStart_toEndOf="@+id/detailAvatarUrlImageView"
            app:layout_constraintTop_toTopOf="@+id/detailAvatarUrlImageView" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/nameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/repository_name_placeholder"
            android:textColor="@color/repository_full_name"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/detailAvatarUrlImageView"
            app:layout_constraintTop_toBottomOf="@+id/detailAvatarUrlImageView" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/detailRepositoryDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/repository_description_placeholder"
            app:layout_constraintStart_toStartOf="@+id/nameView"
            app:layout_constraintTop_toBottomOf="@+id/nameView" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/detailStarImageView"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/star_24px"
            app:layout_constraintStart_toStartOf="@+id/detailRepositoryDescription"
            app:layout_constraintTop_toBottomOf="@+id/detailRepositoryDescription" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/starsView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/start_view_placeholder"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/detailStarImageView"
            app:layout_constraintStart_toEndOf="@+id/detailStarImageView"
            app:layout_constraintTop_toTopOf="@+id/detailStarImageView" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/detailForkImageView"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/fork"
            android:tint="@color/fork_color"
            app:layout_constraintBottom_toBottomOf="@+id/starsView"
            app:layout_constraintStart_toEndOf="@+id/starsView"
            app:layout_constraintTop_toTopOf="@+id/starsView" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/forksView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/forks_view_placeholder"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/detailForkImageView"
            app:layout_constraintStart_toEndOf="@+id/detailForkImageView"
            app:layout_constraintTop_toTopOf="@+id/detailForkImageView" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/detailIssueImageView"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="16dp"
            android:background="@color/green"
            app:layout_constraintStart_toStartOf="@+id/detailStarImageView"
            app:layout_constraintTop_toBottomOf="@+id/detailStarImageView"
            app:shapeAppearanceOverlay="@style/RoundedImage" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/detailWatchImageView"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="8dp"
            android:background="@color/yellow"
            app:layout_constraintEnd_toEndOf="@+id/detailIssueImageView"
            app:layout_constraintStart_toStartOf="@+id/detailIssueImageView"
            app:layout_constraintTop_toBottomOf="@+id/detailIssueImageView"
            app:shapeAppearanceOverlay="@style/RoundedImage" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/detailLanguageImageView"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/baseline_circle_24"
            app:layout_constraintEnd_toEndOf="@+id/detailWatchImageView"
            app:layout_constraintStart_toStartOf="@+id/detailWatchImageView"
            app:layout_constraintTop_toBottomOf="@+id/detailWatchImageView"
            app:shapeAppearanceOverlay="@style/RoundedImage" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/openIssuesView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/open_issues_view_placeholder"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/detailIssueImageView"
            app:layout_constraintStart_toEndOf="@+id/detailIssueImageView"
            app:layout_constraintTop_toTopOf="@+id/detailIssueImageView" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/watchersView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/watchers_view_placeholder"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/detailWatchImageView"
            app:layout_constraintStart_toEndOf="@+id/detailWatchImageView"
            app:layout_constraintTop_toTopOf="@+id/detailWatchImageView" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/languageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/watchers_view_placeholder"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/detailLanguageImageView"
            app:layout_constraintStart_toEndOf="@+id/detailLanguageImageView"
            app:layout_constraintTop_toTopOf="@+id/detailLanguageImageView" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/readmeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailLanguageImageView"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
